--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
         <div class="row">
             <div class="col" id="timer">
-                <button id="startGame">Click to Play!</button>
+
             </div>
         </div>
 
         <div class="row-5">
             <div class="col" id="question">
-
+                <button id="startGame">Click to Play!</button>
             </div>
         </div>
 
@@ -53,6 +53,12 @@
                 <div class="row-5">
                     <button class="answers" id="answer4"> </button>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col" id="gif">
+                <button id="playAgain">Play Again?</button>
             </div>
         </div>
 
