--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 
         <div class="row">
             <div class="col" id="gif">
-                <button id="playAgain">Play Again?</button>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col">
+                    <button id="playAgain">Play Again?</button>
             </div>
         </div>
 
